feat: permitir cadastro inicial do proprietario
